--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/Felipe-Navas/instagram-be#readme",
   "devDependencies": {
     "@shopify/eslint-plugin": "^43.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.5.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
@@ -42,10 +44,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1"
   }
 }
