--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "no-console": 1,
     "prettier/prettier": 2,
     "consistent-return": "off",
-    "no-process-env": "off"
+    "no-process-env": "off",
+    "import/no-cycle": "off"
   }
 }
